LEFTCOLUMN start resp styles;
/* 	LEFTCOLUMN */
@media screen and (min-width: 1024px) {
.leftcolumn {
	float: left;
	position: relative;
	margin: 0 22px 0 0;
	overflow: hidden;
	margin-top: 0;
	}
}

Signed-off-by: Ernest Brugger <erbrugger@gmail.com>

--- a/css/main_resp.css
+++ b/css/main_resp.css
@@ -2667,13 +2667,15 @@ ul.tabs li.last {
 	top: 20px;
 }
 
-
+@media screen and (min-width: 1024px) {
 .leftcolumn {
 	float: left;
-	position: relative; 
+	position: relative;
+	margin: 0 22px 0 0; 
 	overflow: hidden; 
 	margin-top: 0;
 	}
+}
 
 .kids {
 	list-style: none;
